--- a/spring-cloud/pom.xml
+++ b/spring-cloud/pom.xml
@@ -12,8 +12,8 @@
         <module>ribbon1</module>
         <module>feign1</module>
         <module>zuul</module>
-        <module>config</module>
         <module>config-client</module>
+        <module>config-server</module>
     </modules>
     <packaging>pom</packaging>
     <description>Demo project for Spring Boot</description>
