--- a/spring-cloud/pom.xml
+++ b/spring-cloud/pom.xml
@@ -14,6 +14,8 @@
         <module>zuul</module>
         <module>config-client</module>
         <module>config-server</module>
+        <module>base</module>
+        <module>turbine</module>
     </modules>
     <packaging>pom</packaging>
     <description>Demo project for Spring Boot</description>
